--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "@okta/okta-sdk-nodejs": "^6.6.0",
     "@sentry/node": "^7.29.0",
     "@sentry/tracing": "^7.29.0",
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "logrocket": "^3.0.1",
-    "mongoose": "^6.8.1"
+    "mongoose": "^6.8.1",
+    "stripe": "^11.14.0"
   }
 }
